--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "tsc-watch": "^6.2.0",
     "turbo": "2.7.3",
     "typescript": "*",
+    "wrangler": "^4.58.0",
     "zx": "^8.1.4"
   },
   "pnpm": {
